--Luke
===================================

newdns.c removed - another useless file
--Luke
===================================

------------------------------------------------
Beta2
------------------------------------------------

ripped cloak.c from 3.2, and added Config
options as needed.
--Luke
===================================

Fixed 3 svsnoops bugs, so it appears to be
actually working now...
--Luke
===================================

+S users no longer show channels in /whois
--Luke
===================================

Added a gzline command. I use it with bopm on
my network all the time, and am getting
sick of readding it after each new release.
Additionally, I think it's a useful command
for anyone to have.
--Luke
===================================

Revamped operoverride stuff so it's consistent
and somewhat sane. (also made NetAdmin.Chat
NetAdminChat to keep with other forms)
--Luke
===================================

Fixed m_kick more
--Luke
===================================

Made "is a bot.." not bold
--Luke
===================================

Fixed a bug with \r\n being mistakenly parsed
wrong. Thanks to John_z
--Luke
===================================

Added temp patch to m_kline to stop segfault
--Luke
===================================

------------------------------------------------
Beta3
------------------------------------------------

Backported check_pings with loop.do_ban_check from 3.2
--Stskeeps
===================================

Added nice fix to HCN so that BOPM works natively
(it would still be wise to mod bopm yourself
and have it scan all clients by using +F, as I've
done, but whatever.)
--Luke
===================================

Moved cloak key definitions to unrealircd.conf
--Luke
===================================

omfg, a patch that resolved some really interesting
problems with really long parameter modes has been
applied. (this in itself is a great reason to
upgrade)
--Luke
===================================
