@@ -81,7 +81,6 @@ CRYPT_OPER_PASSWORD=""
 CRYPT_LINK_PASSWORD=""
 CRYPT_ILINE_PASSWORD=""
 CRYPT_XLINE_PASSWORD=""
-ENABLE_EXEMPTALL="1"
 LISTEN_SIZE="5"
 MAXSENDQLENGTH="3000000"
 BUFFERPOOL="(9 * MAXSENDQLENGTH)"
@@ -1503,47 +1502,6 @@ fi
 		esac
 done		
 
-echo ""
-echo "*** NEW ***"
-echo "In previous versions, E lines only exempted a particular"
-echo "mask from klines. Enabling this option will exempt the mask from"
-echo "glines, zlines, gzlines, and shuns as well."
-
-FOO=""
-runonce=""
-while [ -z "$FOO" ] ; do
-if [ -n "$ENABLE_EXEMPTALL" ] ; then
-	FOO="Yes"
-else
-	FOO="No"
-fi
-echo ""
-echo "Enable global exemptions with E lines?"
-echo $n "[$FOO] -> $c"
-if [ -z "$AUTO_CONFIG" -o -n "$runonce" ] ; then
-	read cc
-else
-	cc=""
-	runonce=Yes
-fi
-if [ -z "$cc" ] ; then
-	cc=$FOO
-fi
-	case "$cc" in
-		[Yy]*)
-			ENABLE_EXEMPTALL="1"
-			;;
-		[Nn]*)
-			ENABLE_EXEMPTALL=""
-			;;
-		*)
-			echo ""
-			echo "You need to enter either Yes or No here..."
-			echo ""
-			FOO=""
-			;;
-		esac
-done
 
 FOO=""
 runonce=""
@@ -1894,11 +1852,6 @@ if [ -n "$CRYPT_XLINE_PASSWORD" ] ; then
 else
     echo "#undef CRYPT_XLINE_PASSWORD" >> $OPTIONS_H
 fi
-if [ -n "$ENABLE_EXEMPTALL" ] ; then
-    echo "#define ENABLE_EXEMPTALL 1" >> $OPTIONS_H
-else
-    echo "#undef ENABLE_EXEMPTALL" >> $OPTIONS_H
-fi
 if [ -n "$HUB" ] ; then
     echo "#define HUB 1" >> $OPTIONS_H
 else
@@ -1944,7 +1897,6 @@ CRYPT_OPER_PASSWORD="$CRYPT_OPER_PASSWORD"
 CRYPT_LINK_PASSWORD="$CRYPT_LINK_PASSWORD"
 CRYPT_ILINE_PASSWORD="$CRYPT_ILINE_PASSWORD"
 CRYPT_XLINE_PASSWORD="$CRYPT_XLINE_PASSWORD"
-ENABLE_EXEMPTALL="$ENABLE_EXEMPTALL"
 LISTEN_SIZE="$LISTEN_SIZE"
 MAXSENDQLENGTH="$MAXSENDQLENGTH"
 BUFFERPOOL="$BUFFERPOOL"
